@@ -27,4 +27,4 @@ JSON::XS                = 1
 LWP::Protocol::https    = 0
 
 [MetaNoIndex]
-directory = tools
+directory = inc
